--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>EBAC Banking</h1>
+        <h1>TURBO BANKING</h1>
         <h2>Depósitos</h2>
         <form id="form-deposito">
             <input type="text" id="nome-beneficiario" required placeholder="Nome completo do beneficiário" />
